Update star mode message in index.html
Added a personalized message in star mode.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
 <div id="starMode" style="display:none;">
   <div class="star">✨</div>
-  <div class="starText">Ahora tú eres mi lugar favorito en el universo 💖</div>
+  <div class="starText">Ahora tú eres mi lugar favorito en el universo Mi Tissiu 💖</div>
 </div>
 
 </body>
 </html>
+
